# src/main/java/demo/onebox/api/CartsApiController.java
@@ -1,10 +1,9 @@
 package demo.onebox.api;
 
+import demo.onebox.model.CartDTO;
+import demo.onebox.model.CartsPost201Response;
+import demo.onebox.model.ProductDTO;
 import demo.onebox.port.ICartService;
-import es.fudontime.api.CartsApi;
-import es.fudontime.model.CartDTO;
-import es.fudontime.model.CartsPost201Response;
-import es.fudontime.model.ProductDTO;
 import lombok.AllArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -19,26 +18,43 @@ public class CartsApiController implements CartsApi {
     private final ICartApiMapper cartApiMapper;
 
     @Override
-    public ResponseEntity<CartDTO> cartsCartIdGet(Integer cartId) throws Exception {
+    public ResponseEntity<CartDTO> cartsCartIdGet(String cartId) throws Exception {
         return new ResponseEntity<>(
             cartApiMapper.cartObjToCartDto(
-                    cartService.getCartById(cartId)
+                cartService.getCartById(cartId)
             ),
         HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<Void> cartsCartIdProductsPost(Integer cartId, List<ProductDTO> productDTO) throws Exception {
-        return null;
+    public ResponseEntity<CartDTO> cartsCartIdProductsPost(String cartId, List<ProductDTO> productDTO) throws Exception {
+        return new ResponseEntity<>(
+            cartApiMapper.cartObjToCartDto(
+                cartService.addProductsById(cartId,
+                  cartApiMapper.productDtoToProductObj(productDTO)
+                )
+            ),
+        HttpStatus.OK);
+    }
+
+
+    @Override
+    public ResponseEntity<Void> cartsDelete(String cartId) throws Exception {
+        cartService.deleteCart(cartId);
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<Void> cartsDelete(Integer cartId) throws Exception {
+    public ResponseEntity<CartsPost201Response> cartsPost(List<ProductDTO> productDTO) throws Exception {
         return null;
     }
 
-    @Override
+
     public ResponseEntity<CartsPost201Response> cartsPost() throws Exception {
-        return null;
+        return new ResponseEntity<>(
+            cartApiMapper.idStringToResponse(
+                cartService.createCart()
+            ),
+        HttpStatus.OK);
     }
 }
