# src/main/java/demo/onebox/api/ICartApiMapper.java
@@ -2,8 +2,9 @@ package demo.onebox.api;
 
 import demo.onebox.domain.CartObj;
 import demo.onebox.domain.ProductObj;
-import es.fudontime.model.CartsCartIdGet200Response;
-import es.fudontime.model.Product;
+import demo.onebox.model.CartDTO;
+import demo.onebox.model.CartsPost201Response;
+import demo.onebox.model.ProductDTO;
 import org.mapstruct.Mapper;
 import org.mapstruct.MappingConstants;
 
@@ -11,6 +12,7 @@ import java.util.List;
 
 @Mapper(componentModel = MappingConstants.ComponentModel.SPRING)
 public interface ICartApiMapper {
-    CartsCartIdGet200Response cartObjToCartDto(CartObj cartObj);
-    List<ProductObj> productDtoToProductObj(List<Product> productDto);
+    CartDTO cartObjToCartDto(CartObj cartObj);
+    List<ProductObj> productDtoToProductObj(List<ProductDTO> productDto);
+    CartsPost201Response idStringToResponse(String id);
 }
